testData/annotator/listSubsetOperator.R
x1$<info descr="R_FIELD">x2</info> +
  x2$<error descr="R grammar doesn't allow `x3::x4` here"><info descr="R_NAMESPACE">x3</info>::x4</error> +
  x5$<error descr="R grammar doesn't allow `(x6 + 1)` here">(x6 + 1)</error> +
  x7$<error descr="R grammar doesn't allow `1` here">1</error> +
  x8$<info descr="R_FIELD">"hello"</info>